Fix spacing for Blog titles and overall headings

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,13 +9,14 @@ $base-font-size:   16px;
 $base-line-height: 1.5;
 $spacing-unit:     30px;
 
-ul {
+h1, h2, h3, h4, h5, ul {
     margin:0;
     padding:0;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
    font-weight: 300;
+   margin-bottom: 15px;
 }
 
 body {
